<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:outlineProvider="bounds"
    tools:context="com.vivekanand.literature.literatureofvivekanand.MainActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/appbar"></include>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/frame_english"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainLayoutHeight"
                android:layout_marginBottom="@dimen/mainLayoutMargin"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_rect"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:onClick="goToEnglish"
                android:orientation="horizontal"
                android:padding="1dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/mainImageWidth"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    app:srcCompat="@drawable/english" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView"
                    android:background="@color/colorPrimaryViv"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="1dp"
                    android:text="@string/read_in_english"
                    android:textSize="@dimen/mainTextSize"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frame_bengali"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainLayoutHeight"
                android:layout_marginBottom="@dimen/mainLayoutMargin"
                android:background="@drawable/custom_rect"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:onClick="goToBengali"
                android:orientation="horizontal"
                android:padding="1dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/mainImageWidth"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    app:srcCompat="@drawable/bengali" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView1"
                    android:background="@color/colorPrimaryViv"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="1dp"
                    android:text="@string/read_in_bengali"
                    android:textSize="@dimen/mainTextSize"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frame_gallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainLayoutHeight"
                android:layout_marginBottom="@dimen/mainLayoutMargin"
                android:background="@drawable/custom_rect"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:onClick="goToGallery"
                android:orientation="horizontal"
                android:padding="1dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/mainImageWidth"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    app:srcCompat="@drawable/gallery" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView2"
                    android:background="@color/colorPrimaryViv"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="1dp"
                    android:text="@string/gallery"
                    android:textSize="@dimen/mainTextSize"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frame_settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainLayoutHeight"
                android:layout_marginBottom="@dimen/mainLayoutMargin"
                android:background="@drawable/custom_rect"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:onClick="goToSettings"
                android:orientation="horizontal"
                android:padding="1dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView_setting"
                    android:layout_width="@dimen/mainImageWidth"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/textView_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView_setting"
                    android:background="@color/colorPrimaryViv"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="1dp"
                    android:text="@string/settigs"
                    android:textSize="@dimen/mainTextSize"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/frame_about_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainLayoutHeight"
                android:layout_marginBottom="@dimen/mainLayoutMargin"
                android:background="@drawable/custom_rect"
                android:clickable="true"
                android:elevation="8dp"
                android:focusable="true"
                android:onClick="goToAboutUs"
                android:orientation="horizontal"
                android:padding="1dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView_about"
                    android:layout_width="@dimen/mainImageWidth"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="1dp"
                    app:srcCompat="@drawable/aboutus" />

                <TextView
                    android:id="@+id/textView_about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imageView_about"
                    android:background="@color/colorPrimaryViv"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="1dp"
                    android:text="@string/about_us"
                    android:textSize="@dimen/mainTextSize"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
